# GetDataFaster

./: .gitignore  pyproject.toml
src/: consulta.py  data_generator.py  database.py  script_consulta.py  script_create.py
